Fix low viewport causing footer background color visible

--- a/sass/stylesheet.scss
+++ b/sass/stylesheet.scss
@@ -13,14 +13,13 @@ $light-color: $bg-color;
 
     /* LAYOUT */
     body {
-        background-color: $bg-color;
+        background-color: $base-color;
     }
 
     .container {
-        margin: 3.125em auto;
-        min-width: 18.5em;
-        max-width: 37.5em; /*600px/16px*/
+        padding: 2em 0;
         width: 100%;
+        background-color: $bg-color;
     }
 
     header {
@@ -60,10 +59,14 @@ $light-color: $bg-color;
         .title { float: left; }
 
     .post-container {
-        margin: 1em 0;
+        overflow: hidden;
+        margin: 0 auto;
         padding: 0 1.5em;
+        min-width: 18.5em;
+        max-width: 37.5em; /*600px/16px*/
         article {
-            overflow: hidden; margin: 15em 0 2em;
+            overflow: hidden;
+            margin: 15em 0 2em;
             &:first-child {
                 margin-top: 3em;
             }
@@ -71,7 +74,6 @@ $light-color: $bg-color;
     }
 
     footer {
-        margin-top: 2em;
         padding: 2em 0;
         border-top: solid 6px #f5773d;
         background-color: $header-color;
@@ -127,8 +129,8 @@ $light-color: $bg-color;
     }
 
     .credit {
-        text-align: center;
         color: $bg-color;
+        text-align: center;
         font-size: 0.9em;
     }
 
@@ -210,9 +212,9 @@ $light-color: $bg-color;
 
         /* Archives */
         .archives > h2 {
-            font-size: 1.1em;
             margin: 1.5em 0 .5em;
             text-align: left;
+            font-size: 1.1em;
         }
 
         .archives > h2:first-child {
@@ -220,10 +222,10 @@ $light-color: $bg-color;
         }
 
         .archives h3 {
-            font-size: .9em;
-            padding: 0;
             margin: 0;
+            padding: 0;
             text-align: left;
+            font-size: .9em;
         }
 
         .archives > article {
@@ -231,10 +233,10 @@ $light-color: $bg-color;
         }
 
         .archives time {
-            color: #4d4d4d;
             display: block;
-            font-size: .7em;
             height: 1.9em;
+            color: #4d4d4d;
+            font-size: .7em;
         }
 
         /* Displays source link and dates published */
@@ -303,19 +305,19 @@ $light-color: $bg-color;
             box-shadow: 0 0 3px 1px #969799;
             color: #BBAF75;
             text-shadow: none;
-            white-space: pre-wrap;       /* css-3 */
-            white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-            white-space: -pre-wrap;      /* Opera 4-6 */
+            white-space: pre-wrap;         /* css-3 */
+            white-space: -moz-pre-wrap;    /* Mozilla, since 1999 */
+            white-space: -pre-wrap;        /* Opera 4-6 */
             white-space: -o-pre-wrap;    /* Opera 7 */
-            word-wrap: break-word;       /* Internet Explorer 5.5+ */
+            word-wrap: break-word;         /* Internet Explorer 5.5+ */
             font: .7em/1.5em Menlo, Courier, Monospace;
         }
 
         .update {
             box-sizing: border-box;
-            padding: .5em;
             margin: 1.1em 0;
-            border:  4px solid;
+            padding: .5em;
+            border:    4px solid;
             background-color: #1D1F20;
             color: #BBAF6C;
             text-shadow: none;
@@ -335,7 +337,7 @@ $light-color: $bg-color;
             }
         }
 
-   /* PREVIOUS-NEXT LINKS */
+     /* PREVIOUS-NEXT LINKS */
 
         .post-container {
             nav {
